...
                android:gravity="top"
                android:textColorHint="@color/grey_black_1000"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:id="@+id/edt_flight_search_origin"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/img_flight_search_origin"
                app:layout_constraintTop_toBottomOf="@+id/tv_flight_search_from"
                android:hint="@string/text_origin"
                android:textColor="@color/grey_black_1000"
...
                android:gravity="top"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:textColorHint="@color/grey_black_1000"
                android:id="@+id/edt_flight_search_destination"
                app:layout_constraintLeft_toRightOf="@+id/img_flight_search_destination"
                app:layout_constraintTop_toBottomOf="@+id/tv_flight_search_to"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="@string/text_destination"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/grey_black_1000"
...
                android:layout_height="@dimen/flight_search_small_icon_dimen"
                android:id="@+id/img_flight_child_decrease"
                android:layout_marginEnd="@dimen/margin_medium"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_flight_search_flights"
        android:background="@color/red_google"
        android:textColor="@color/grey_white_1000"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/text_search_flights"
        android:layout_marginTop="@dimen/flight_search_small_icon_dimen"
...
