...
                android:textSize="18sp"
                tools:text="Istanbul"
                android:id="@+id/txt_flight_detail_origin_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                tools:text="IST"
                android:textColor="@color/grey_black_1000"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/txt_flight_detail_origin_city"
                app:layout_constraintLeft_toLeftOf="parent"
...
                android:textSize="18sp"
                tools:text="Izmir"
                android:id="@+id/txt_flight_detail_destination_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                tools:text="ADB"
                android:textColor="@color/grey_black_1000"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/txt_flight_detail_destination_city"
                app:layout_constraintLeft_toLeftOf="parent"
...
